# Rent-Exempt-NFT-Minting-Program-with-Metadata

./: Anchor.toml  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  tsconfig.json
app/src/: metadata.json  mint-nft.ts
programs/nft_minting_project/: Cargo.toml
programs/nft_minting_project/src/: lib.rs
tests/: nft_minting_project.ts
