[package]
name = "nft_minting_project"
version = "0.1.0"
description = "Solana NFT minting project with Metaplex integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_minting_project"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
solana-program = "~1.18.2"